--- a/Style.css
+++ b/Style.css
@@ -1,16 +1,37 @@
 body{
-    background-image: url(https://images.pexels.com/photos/1414651/pexels-photo-1414651.jpeg?cs=srgb&dl=pexels-adonyi-g%C3%A1bor-1414651.jpg&fm=jpg);
+    background-color:seashell;
+    background-attachment: fixed;
 }
 [class="hat"]{
+background-image: url(https://cdn.pixabay.com/photo/2017/03/25/18/06/color-2174066_960_720.png);
+background-size: 1500px;
 font-family: fantasy;
 font-style: italic;
 font-size: 35px;
 text-align: center
 }
+
 [class="recipes"]{
-    background-color: white;
-    width: 500px;
-    background-position: center;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+h3{
+    font-family: fantasy;
+    font-style: normal;
+    font-size: 30px;
+}
+
+a{
+  background-color: orange; 
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 17px;
+}
+
+img{
+    object-fit: cover;
 }
