--- a/Style.css
+++ b/Style.css
@@ -18,8 +18,10 @@ text-align: center
 
 h3{
     font-family: fantasy;
-    font-style: normal;
-    font-size: 30px;
+    font-size: 35px;
+}
+p{
+    font-size: 20px;
 }
 
 a{
@@ -29,9 +31,16 @@ a{
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 img{
     object-fit: cover;
+}
+[class="eraldi"]{
+    border-style: groove;
+    border-radius: 200px;
+    border-width: 5px;
+    background-color: whitesmoke;
+
 }
